--- a/ob-send.html
+++ b/ob-send.html
@@ -30,7 +30,7 @@ let subdata = {
       "siteid": siteid
     }
 
-fetch('https://events.hookdeck.com/e/src_UUj0G2kTCMfR', {
+fetch('https://www.app.obeatow.com/_functions/formapi', {
           method: 'POST', // or 'PUT'
           headers: {
             'Content-Type': 'application/json',
