--- a/ob-send.html
+++ b/ob-send.html
@@ -30,7 +30,7 @@ let subdata = {
       "siteid": siteid
     }
 
-fetch('https://events.hookdeck.com/e/src_UUj0G2kTCMfR', {
+fetch('https://www.app.obeatow.com/_functions/formapi', {
           method: 'POST', // or 'PUT'
           headers: {
             'Content-Type': 'application/json',
@@ -40,7 +40,6 @@ fetch('https://events.hookdeck.com/e/src_UUj0G2kTCMfR', {
           .then((response) => response.json())
           .then((subdata) => {
             console.log('Success:');
-            window.removeEventListener("message");
           })
           .catch((error) => {
             console.error('Error:', error);
